syntax = "proto3";
package proto;
option go_package = "./proto";

message Empty {}

message DataObject {
    string remote_id = 1;
    string resource_name = 2;
    string uri = 3;
    string metadata = 4;
  }

message SyncRequest {
    string options = 1;
    uint32 callback_handler_server = 2;
}

message SyncResponse {
    repeated DataObject response = 1;
}

message EndSync {
    string metadata = 1;
  }

service Connector {
    rpc Sync(SyncRequest) returns (EndSync);
}

service CallbackHandler {
    rpc Upsert(SyncResponse) returns (Empty);
    rpc Clean(Empty) returns (Empty);
}
